[gd_scene load_steps=11 format=3 uid="uid://srdyiobu6tak"]

[ext_resource type="Script" path="res://Scenes/Characters/player_selection.gd" id="1_1bu8m"]
[ext_resource type="PackedScene" uid="uid://b7ffgoi26twgv" path="res://Scenes/Characters/player_selection_set.tscn" id="2_3o4ka"]
[ext_resource type="Texture2D" uid="uid://cl83ws7tesjb6" path="res://Assets/UI_Assets/icons8-left-100.png" id="3_ik5c8"]
[ext_resource type="FontFile" uid="uid://csf05u5hrgcdp" path="res://Resources/SuperComic-qZg62.ttf" id="3_r4kgj"]
[ext_resource type="Texture2D" uid="uid://d34dygk5t5hkh" path="res://Assets/UI_Assets/icons8-heart-stamp/icons8-heart-96.png" id="4_2atf2"]
[ext_resource type="Texture2D" uid="uid://dpgq8lw4bd1el" path="res://Assets/UI_Assets/icons8-right-100.png" id="4_5l7kk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnf54"]

[sub_resource type="LabelSettings" id="LabelSettings_kuwxu"]
font = ExtResource("3_r4kgj")
font_size = 75

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3r2w0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kimx1"]

[node name="PlayerSelection" type="Node"]
script = ExtResource("1_1bu8m")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="PlayerSelectionSet" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_3o4ka")]

[node name="SelectionUI" type="CanvasLayer" parent="."]

[node name="PlayerInfo" type="Control" parent="SelectionUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SelectionUI/PlayerInfo"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 208.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bnf54")

[node name="MarginContainer" type="MarginContainer" parent="SelectionUI/PlayerInfo/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SelectionUI/PlayerInfo/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StatsContainer" type="HBoxContainer" parent="SelectionUI/PlayerInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="SelectionUI/PlayerInfo/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "PLAYER"
label_settings = SubResource("LabelSettings_kuwxu")

[node name="PlayerHealthSeparator" type="VSeparator" parent="SelectionUI/PlayerInfo/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_3r2w0")

[node name="TextureRect" type="TextureRect" parent="SelectionUI/PlayerInfo/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
texture = ExtResource("4_2atf2")
expand_mode = 2

[node name="Description" type="Label" parent="SelectionUI/PlayerInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DESCRIPTION"
label_settings = SubResource("LabelSettings_kuwxu")

[node name="Change_Fade" type="ColorRect" parent="SelectionUI/PlayerInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="SelectButtons" type="Control" parent="SelectionUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SelectionUI/SelectButtons"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -83.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 300

[node name="HBoxContainer" type="HBoxContainer" parent="SelectionUI/SelectButtons/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LeftArrow" type="Button" parent="SelectionUI/SelectButtons/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("3_ik5c8")
flat = true

[node name="VSeparator" type="VSeparator" parent="SelectionUI/SelectButtons/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 400
theme_override_styles/separator = SubResource("StyleBoxEmpty_kimx1")

[node name="RightArrow" type="Button" parent="SelectionUI/SelectButtons/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("4_5l7kk")
flat = true

[node name="Choose" type="Button" parent="SelectionUI/SelectButtons/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_r4kgj")
theme_override_font_sizes/font_size = 100
text = "CHOOSE"
flat = true
